--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,13 +18,13 @@
         <div class="span2">
           <h4>R packages</h4>
           <ul class="unstyled">
-            <li><a href="{{ site.url }}/r-packages/analogue.html"><small>analogue</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/permute.html"><small>permute</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/vegan.html"><small>vegan</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/cocorresp.html"><small>cocorresp</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/temporalEF.html"><small>temporalEF</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/ggvegan.html"><small>ggvegan</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/pcurve.html"><small>pcurve</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/analogue.html"><small>analogue</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/permute.html"><small>permute</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/vegan.html"><small>vegan</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/cocorresp.html"><small>cocorresp</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/temporalEF.html"><small>temporalEF</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/ggvegan.html"><small>ggvegan</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/pcurve.html"><small>pcurve</small></a></li>
           </ul>        
         </div>
         <div class="span8">
