improvements to atom feeds to allow validation and discovery

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,10 @@
     
     {% include metadata.html %}
     
+    <!-- Link to the Atom feeds -->
+    <link href="{{site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="From the bottom of the heap ATOM feed">
+    <link href="{{site.url }}/feed-R.xml" type="application/atom+xml" rel="alternate" title="From the bottom of the heap ATOM feed of R posts">
+    
     <!-- Le styles -->
     <link href="{{ site.url }}/assets/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
