fixing broken links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
             <li><a href="{{ site.url }}/research/"><small>Research</small></a></li>
             <li><a href="{{ site.url }}/publications/"><small>Publications</small></a></li>
             <li><a href="{{ site.url }}/teaching/"><small>Teaching</small></a></li>
-            <li><a href="{{ site.url }}/dper-scripts/"><small>DPER Scripts</small></a></li>
-            <li><a href="{{ site.url }}/r-packages/"><small>R Packages</small></a></li>
+            <li><a href="{{ site.url }}/code/dper-scripts/"><small>DPER Scripts</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/"><small>R Packages</small></a></li>
           </ul>
         </div>
         <div class="span2">
