update CSS for blockquote styles

--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -345,3 +345,54 @@ table th[class*="span"],
   width: 924px;
   margin-left: 0;
 }
+
+blockquote {
+  padding: 0 0 0 15px;
+  margin: 0 0 20px;
+  float: right;
+  padding-right: 15px;
+  padding-left: 0;
+  border-right: 5px solid #f43d00; /* #eeeeee; */
+  border-left: 0;
+  margin-left: 4em;
+}
+blockquote p {
+  font-size: 14px;
+  line-height: 20px;
+  color: #f43d00;
+}
+blockquote small {
+  display: block;
+  line-height: 20px;
+  color: #999999;
+}
+blockquote small:before {
+  content: '\2014 \00A0';
+}
+blockquote.pull-right {
+  float: right;
+  padding-right: 15px;
+  padding-left: 0;
+  border-right: 5px solid #eeeeee;
+  border-left: 0;
+}
+blockquote.pull-right p,
+blockquote.pull-right small {
+  text-align: right;
+}
+blockquote.pull-right small:before {
+  content: '';
+}
+blockquote.pull-right small:after {
+  content: '\00A0 \2014';
+}
+q:before,
+q:after,
+blockquote:before,
+blockquote:after {
+  content: "";
+}
+
+blockquote p a {
+  color: #000000;
+}
