tweaks to blogroll snippet

--- a/_includes/blog-roll-snippet.html
+++ b/_includes/blog-roll-snippet.html
@@ -7,8 +7,8 @@
                 <li><i class="icon-bookmark"></i> <a href="http://jabberwocky.weecology.org/">Jabberwocky Ecology</a></li>
                 <li><i class="icon-bookmark"></i> <a href="http://schamberlain.github.io/">Recology</a></li>
                 <li><i class="icon-bookmark"></i> <a href="http://www.r-bloggers.com/">R Bloggers</a></li>
-                <li><i class="icon-bookmark"></i> <a href="http://www.ancienteco.com/">Andrew Barr's Paleoecology Blog</a></li>
-                <li><i class="icon-bookmark"></i> <a href="http://methodsblog.wordpress.com/">Methods in Ecology &amp; Evolution Blog</a></li>
+                <li><i class="icon-bookmark"></i> <a href="http://www.ancienteco.com/">Andrew Barr's Ancient Eco</a></li>
+                <li><i class="icon-bookmark"></i> <a href="http://methodsblog.wordpress.com/">Methods in Ecology &amp; Evolution</a></li>
                 <li><i class="icon-bookmark"></i> <a href="http://quantpalaeo.wordpress.com/">Musings on Quantitative Palaeoecology</a></li>
               </ul>
             </div>
