recent updates to the blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,9 @@
         <div class="span10 offset2">
           <div class="row">
             <div class="span8">
+              {% if page.alert %}
+                {% include alert.html %}
+              {% endif %}
             {{ content }}
             <hr />
             <h3>Comments</h3>
