minor tweaks to filtered output

--- a/_includes/category-snippet.html
+++ b/_includes/category-snippet.html
@@ -1,7 +1,7 @@
               <div class="side-snippet">
                 <h4>Posted in</h4>
                 {% for cat in page.categories %}
-                <span class="label label-warning">{{ cat }}</span><br>
+                <span class="label label-warning">{{ cat | capitalize}}</span><br>
                 {% endfor %}
               </div>
        
