--- a/_includes/tag-snippet.html
+++ b/_includes/tag-snippet.html
@@ -1,6 +1,6 @@
               <div class="side-snippet">
                 <h4>Tagged</h4>
                 {% for tag in page.tags %}
-                  <span class="label label-inverse">{{ tag }}</span><br>
+                  <span class="label label-inverse">{{ tag | capitalize }}</span><br>
                 {% endfor %}
               </div>
