adds altmetric.com badges to publications page

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -10,6 +10,9 @@
         });
     </script>
     {% include google-analytics.html %}
-    {%if page.impactstory %}
+    {% if page.impactstory %}
 		{% include impactstory.html %}
 	{% endif %}
+    {% if page.altmetric %}
+        {% include altmetric.html %}
+    {% endif %}
