--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -396,3 +396,23 @@ blockquote:after {
 blockquote p a {
   color: #000000;
 }
+
+li a i:hover {
+  background-color: rgba(244,61,0,0.25);
+}
+
+div.altmetric-embed a img {
+  vertical-align: baseline;
+}
+
+.altmetric-embed.popover {
+  border: none;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  border-box-shadow: none;
+  width: auto;
+  background-color: transparent;
+}
