--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,6 +11,7 @@
             <ul class="nav">
               <li {% if page.active == "home" %}class="active"{% endif %}><a href="{{ site.url }}"><i class="icon-home"></i> Home</a></li>
               <li {% if page.active == "about" %}class="active"{% endif %}><a href="{{ site.url }}/about/"><i class="icon-info-sign"></i> About</a></li>
+              <li {% if page.active == "blog" %}class="active"{% endif %}><a href="{{ site.url }}/blog/"><i class="icon-comment"></i> Blog</a></li>
               <li {% if page.active == "research" %}class="active"{% endif %}><a href="{{ site.url }}/research/"><i class="icon-wrench"></i> Research</a></li>
               <li {% if page.active == "publications" %}class="active"{% endif %}><a href="{{ site.url }}/publications/"><i class="icon-file"></i> Publications</a></li>
               <li {% if page.active == "teaching" %}class="active"{% endif %}><a href="{{ site.url }}/teaching/"><i class="icon-user"></i> Teaching</a></li>
