new css for figcaption and margin on image blocks pulled left

--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -130,6 +130,11 @@ figcaption {
   line-height: 20px;
   color: #f43d00;
   font-size: 17.5px;
+  margin-top: 0.5em;
+}
+
+.thumbnails figcaption {
+  text-align: center;
 }
 
 footer h4 {
@@ -415,4 +420,31 @@ div.altmetric-embed a img {
   border-box-shadow: none;
   width: auto;
   background-color: transparent;
+}
+
+kbd {
+/*
+ * http://meta.superuser.com/questions/4788/css-for-the-new-kbd-style
+ * 
+ */
+  -moz-border-radius:3px;
+  -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  -webkit-border-radius:3px;
+  -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  background-color:#f7f7f7;
+  border:1px solid #ccc;
+  border-radius:3px;
+  box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  color:#333;
+  display:inline-block;
+  font-family:Arial,Helvetica,sans-serif;
+  font-size:11px;
+  line-height:1.4;
+  margin:0 .1em;
+  padding:.1em .6em;
+  text-shadow:0 1px 0 #fff;
+}
+
+.ftboth-img-right {
+  margin-right: 1em;
 }
