some tweaks to styles for pre and code tags to allow overflow in the x direction

--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -27,10 +27,20 @@ pre {
   margin-top: 1em;
   margin-bottom: 1em;
   font-size: 13px;
+  overflow-x: auto;
+  word-break: normal;
+  word-wrap: normal;
 }
 
 pre code {
   font-size: 13px;
+}
+
+pre code.text{
+  word-wrap: normal;
+  overflow-wrap: normal;
+  white-space: pre;
+  word-break: normal;
 }
 
 img.post-right {
