changes made up to and including Jul 28th 2014

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
       
 
     </div><!--/.fixed-container-->
+    
     <footer>
       <div class="row">
         <div class="span2">
@@ -22,6 +23,7 @@
             <li><a href="{{ site.url }}/code/r-packages/permute.html"><small>permute</small></a></li>
             <li><a href="{{ site.url }}/code/r-packages/vegan.html"><small>vegan</small></a></li>
             <li><a href="{{ site.url }}/code/r-packages/cocorresp.html"><small>cocorresp</small></a></li>
+            <li><a href="{{ site.url }}/code/r-packages/coenocliner.html"><small>coenocliner</small></a></li>
             <li><a href="{{ site.url }}/code/r-packages/temporalEF.html"><small>temporalEF</small></a></li>
             <li><a href="{{ site.url }}/code/r-packages/ggvegan.html"><small>ggvegan</small></a></li>
             <li><a href="{{ site.url }}/code/r-packages/pcurve.html"><small>pcurve</small></a></li>
@@ -34,6 +36,7 @@
         </div>
       </div>
     </footer>
+    
     {% include javascript.html %}
 
   </body>
