--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,8 +12,20 @@
               <li {% if page.active == "home" %}class="active"{% endif %}><a href="{{ site.url }}"><i class="icon-home"></i> Home</a></li>
               <li {% if page.active == "about" %}class="active"{% endif %}><a href="{{ site.url }}/about/"><i class="icon-info-sign"></i> About</a></li>
               <li {% if page.active == "blog" %}class="active"{% endif %}><a href="{{ site.url }}/blog/"><i class="icon-comment"></i> Blog</a></li>
-              <li {% if page.active == "research" %}class="active"{% endif %}><a href="{{ site.url }}/research/"><i class="icon-wrench"></i> Research</a></li>
               <li {% if page.active == "publications" %}class="active"{% endif %}><a href="{{ site.url }}/publications/"><i class="icon-file"></i> Publications</a></li>
+              <li {% if page.active == "research" %}class="active"{% endif %}><a href="{{ site.url }}/research/"><i class="icon-wrench"></i> Research</a></li>
+              <li  {% if page.active == "lab" %}class="active dropdown"{% else %}class="dropdown"{% endif %}>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <i class="icon-filter"></i> The Lab <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a tabindex="-1" href="{{ site.url }}/lab/">About</a></li>
+                  <li><a tabindex="-1" href="{{ site.url }}/lab/research/">Research</a></li>
+                  <li><a tabindex="-1" href="{{ site.url }}/lab/members/">Members</a></li>
+                  <li><a tabindex="-1" href="{{ site.url }}/lab/publications">Publications</a></li>
+                  <li><a tabindex="-1" href="{{ site.url }}/lab/join/">Join the lab</a></li>
+                </ul>
+              </li>
               <li {% if page.active == "teaching" %}class="active"{% endif %}><a href="{{ site.url }}/teaching/"><i class="icon-user"></i> Teaching</a></li>
               <li  {% if page.active == "code" %}class="active dropdown"{% else %}class="dropdown"{% endif %}>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-hdd"></i> Code <b class="caret"></b></a>
@@ -46,6 +58,9 @@
                       </li>
                       <li>
                         <a tabindex="-1" href="{{ site.url }}/code/r-packages/cocorresp.html">cocorresp</a>
+                      </li>
+                      <li>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/coenocliner.html">coenocliner</a>
                       </li>
                       <li>
                         <a tabindex="-1" href="{{ site.url }}/code/r-packages/temporalEF.html">temporalEF</a>
