--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -51,6 +51,11 @@ img.post-right {
   margin-bottom: 10px;
 }
 
+img.licence-icon {
+  margin-top: 2px;
+  vertical-align: text-top;
+}
+
 .navbar .brand {
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 100;
