--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -1,20 +1,18 @@
-
-{% if defined?(page.date) %} 
-  {% assign date = page.date %}
-  {% if date.class != Time %} 
-    {% assign date = Time.parse(date) %}
+{% if page.date %} 
+  {% assign postdate = page.date %}
+  {% if postdate.class != Time %} 
+    {% assign postdate = Time.parse(postdate) %}
   {% endif %}
 {% else %}
-  {% assign date = site.time %}
+  {% assign postdate = site.time %}
 {% endif %}
-
 <!-- HTML5 metadata -->
 <meta name="keywords" content="{{ site.keywords }}" />
 <meta name="description" content="{{ site.description }}" />
 <!-- RDFa Metadata (in DublinCore) -->
 <meta property="dc:title" content="{{ page.title }}" />
 <meta property="dc:creator" content="{{ site.author.name }}" />
-<meta property="dc:date" content="{{date | date_to_xmlschema }}" />
+<meta property="dc:date" content="{{ postdate | date_to_xmlschema }}" />
 <meta property="dc:type" content="" /> <!-- article? entry?-->
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
@@ -24,14 +22,14 @@
 <meta property="og:author" content="{{site.url}}/about/" />
 <meta property="http://ogp.me/ns/profile#first_name" content="{{ site.author.givenName }}"/>
 <meta property="http://ogp.me/ns/profile#last_name" content="{{ site.author.familyName }}"/>
-<meta property="http://ogp.me/ns/article#published_time" content="{{date | date_to_xmlschema }}" />
+<meta property="http://ogp.me/ns/article#published_time" content="{{ postdate | date_to_xmlschema }}" />
 <meta property="og:site_name" content="{{ site.title }}" /> <!-- Same as dc:source? -->
 <meta property="og:url" content="{{site.url}}{{ page.url }}" />
 <meta property="og:type" content="article" />
 <!-- Google Scholar Metadata -->
 <meta name="resource_type" content="{{site.title}}"/>
 <meta name="citation_journal_title" content="{{site.title}}"/>
-<meta name="citation_publication_date" content="{{date | date_to_string }}"/>
-<meta name="citation_date" content="{{date | date_to_string }}"/>
+<meta name="citation_publication_date" content="{{ postdate | date_to_string }}"/>
+<meta name="citation_date" content="{{ postdate | date_to_string }}"/>
 <meta name="citation_author" content="{{ site.author.name }}"/>
-<meta name="citation_title" content="{{page.title}}"/>
+<meta name="citation_title" content="{{ page.title }}"/>
