tweak the design to remove the blank 2col span before the content

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
   {% include header.html %}
       <article>
       <div class="row">
-        <div class="span8 offset2">
+        <!-- <div class="span8 offset2"> -->
+        <div class="span12">
           <div class="clearfix">
             {% if page.next %}<span class="post-nav"><i class="icon-arrow-left"></i> <a href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }}</a></span>{% endif %}
             {% if page.previous %}<span class="post-nav" style="float: right;"><a href="{{ site.url }}{{ page.previous.url }}">{{ page.previous.title }}</a> <i class="icon-arrow-right"></i></span>{% endif %}
@@ -12,20 +13,11 @@
             </header>
           </div>
         </div>
-        <div class="span2">
-            
-        </div>
       </div>
-      <div class="row"><!--
-        <div class="span2">
+      <div class="row">
+        <div class="span12">
           <div class="row">
-            <div class="span2">
-            </div>
-          </div>
-        </div> -->
-        <div class="span10 offset2">
-          <div class="row">
-            <div class="span8">
+            <div class="span10">
               {% if page.alert %}
                 {% include alert.html %}
               {% endif %}
