--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -7,8 +7,16 @@
   {% assign postdate = site.time %}
 {% endif %}
 <!-- HTML5 metadata -->
+{% if page.tags %}
+<meta name="keywords" content="{{ page.tags | join: ', ' }}" />
+{% else %}
 <meta name="keywords" content="{{ site.keywords }}" />
-<meta name="description" content="{{ site.description }}" />
+{% endif %}
+{% if page.excerpt  %}
+<meta name="description" content="{{ page.excerpt | strip_html }}" />
+{% else %}
+<meta name="description" content="{{ page.title }}" />
+{% endif %}
 <!-- RDFa Metadata (in DublinCore) -->
 <meta property="dc:title" content="{{ page.title }}" />
 <meta property="dc:creator" content="{{ site.author.name }}" />
