whole host of updates I forgot to check in

--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,5 +1,5 @@
-              <div class="alert alert-block">
+              <div class="alert alert-error">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <h4>Update!</h4>
+                <h3>Update!</h3>
                 <p>{{ page.alert }}</p>
               </div>
