--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -48,28 +48,31 @@
                     <a tabindex="-1" href="{{ site.url }}/code/r-packages">R Packages</a>
                     <ul class="dropdown-menu">
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/analogue.html">analogue</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/analogue/">analogue</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/permute.html">permute</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/permute/">permute</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/vegan.html">vegan</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/vegan/">vegan</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/cocorresp.html">cocorresp</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/cocorresp/">cocorresp</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/coenocliner.html">coenocliner</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/coenocliner/">coenocliner</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/temporalEF.html">temporalEF</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/temporalEF/">temporalEF</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/ggvegan.html">ggvegan</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/canadaHCD/">canadaHCD</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/pcurve.html">pcurve</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/ggvegan/">ggvegan</a>
+                      </li>
+                      <li>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/pcurve/">pcurve</a>
                       </li>
                     </ul>
                   </li>
