--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -421,8 +421,13 @@ blockquote p a {
   color: #000000;
 }
 
-li a i:hover {
-  background-color: rgba(244,61,0,0.25);
+/*li a i:hover {
+ * background-color: rgba(244,61,0,0.25);
+ *}
+ */
+
+div.altmetric-embed {
+   display: inline-block;
 }
 
 div.altmetric-embed a img {
@@ -467,3 +472,8 @@ kbd {
 .ftboth-img-right {
   margin-right: 1em;
 }
+
+/*a.addToolTip:hover {
+ *color: #fff;
+ *}
+ */
