--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,19 +21,20 @@
           <div class="span2">
             <h4>R packages</h4>
             <ul class="unstyled">
-              <li><a href="{{ site.url }}/code/r-packages/analogue.html"><small>analogue</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/permute.html"><small>permute</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/vegan.html"><small>vegan</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/cocorresp.html"><small>cocorresp</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/coenocliner.html"><small>coenocliner</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/temporalEF.html"><small>temporalEF</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/ggvegan.html"><small>ggvegan</small></a></li>
-              <li><a href="{{ site.url }}/code/r-packages/pcurve.html"><small>pcurve</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/analogue/"><small>analogue</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/permute/"><small>permute</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/vegan/"><small>vegan</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/cocorresp/"><small>cocorresp</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/coenocliner/"><small>coenocliner</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/temporalEF/"><small>temporalEF</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/canadaHCD/"><small>canadaHCD</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/ggvegan/"><small>ggvegan</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/pcurve/"><small>pcurve</small></a></li>
             </ul>        
           </div>
           <div class="span6">
             <h4>Fineprint</h4>
-            <p><small>Copyright &copy; 2010&ndash;2015 {{ site.author.name }}. <a href="{{ site.url}}/permissions/">Some Rights Reserved</a>&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_GB"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a></small></p>
+            <p><small>Copyright &copy; 2010&ndash;2016 {{ site.author.name }}. <a href="{{ site.url}}/permissions/">Some Rights Reserved</a>&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_GB"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a></small></p>
             <p><small>Icons by <a href="http://www.glyphicons.com/">Glyphicons</a> used under CC-BY licence</small></p>
           </div>
         </div>
