several new posts; new CSL, which finally works with the version of pandoc installed in a Fedora install

--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,5 +1,5 @@
               <div class="alert alert-error">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 <h3>Update!</h3>
-                <p>{{ page.alert }}</p>
+                <p>{{ page.alert | markdownify }}</p>
               </div>
