--- a/_includes/disqus-comment.html
+++ b/_includes/disqus-comment.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
   var disqus_shortname = "fromthebottomoftheheap";
-  var disqus_url = "http://www.fromthebottomoftheheap.net{{ page.url }}";
+  var disqus_url = "https://www.fromthebottomoftheheap.net{{ page.url }}";
   var disqus_title = "{{ page.title | escape }}";
   //var disqus_identifier = "{{ page.id }}";
 
