--- a/_includes/tag-snippet.html
+++ b/_includes/tag-snippet.html
@@ -1,6 +1,6 @@
               <div class="side-snippet">
                 <h4>Tagged</h4>
                 {% for tag in page.tags %}
-                  <a href="{{ site.url }}/tag/{{ tag | downcase }}/"><span class="label label-inverse">{{ tag }}</span></a><br>
+                  <a href="{{ site.url }}/tag/{{ tag | replace: " ", "-" | downcase }}/"><span class="label label-inverse">{{ tag }}</span></a><br>
                 {% endfor %}
               </div>
