--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Open+Sans:400italic,700italic,400,700|Open+Sans+Condensed:300,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Open+Sans:400italic,700italic,400,700|Open+Sans+Condensed:300,700);
 /*!
  * Bootstrap v2.2.2
  *
