--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
               <li><a href="{{ site.url }}/code/r-packages/analogue/"><small>analogue</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/permute/"><small>permute</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/vegan/"><small>vegan</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/gratia/"><small>gratia</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/cocorresp/"><small>cocorresp</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/coenocliner/"><small>coenocliner</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/temporalEF/"><small>temporalEF</small></a></li>
