--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,13 +34,13 @@
                     <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/">DPER Scripts</a>
                     <ul class="dropdown-menu">
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-9-statistical-learning.html">Chapter 9</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-9-statistical-learning/">Chapter 9</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-15-analogue-methods.html">Chapter 15</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-15-analogue-methods/">Chapter 15</a>
                       </li>
                       <li>
-                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-19-human-impacts.html">Chapter 18</a>
+                        <a tabindex="-1" href="{{ site.url }}/code/dper-scripts/chapter-19-human-impacts/">Chapter 19</a>
                       </li>
                     </ul>
                   </li>
@@ -55,6 +55,9 @@
                       </li>
                       <li>
                         <a tabindex="-1" href="{{ site.url }}/code/r-packages/vegan/">vegan</a>
+                      </li>
+                      <li>
+                        <a tabindex="-1" href="{{ site.url }}/code/r-packages/gratia/">gratia</a>
                       </li>
                       <li>
                         <a tabindex="-1" href="{{ site.url }}/code/r-packages/cocorresp/">cocorresp</a>
