--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
               <li><a href="{{ site.url }}/code/r-packages/analogue/"><small>analogue</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/permute/"><small>permute</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/vegan/"><small>vegan</small></a></li>
+              <li><a href="{{ site.url }}/code/r-packages/gratia/"><small>gratia</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/cocorresp/"><small>cocorresp</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/coenocliner/"><small>coenocliner</small></a></li>
               <li><a href="{{ site.url }}/code/r-packages/temporalEF/"><small>temporalEF</small></a></li>
@@ -34,7 +35,7 @@
           </div>
           <div class="span6">
             <h4>Fineprint</h4>
-            <p><small>Copyright &copy; 2010&ndash;2016 {{ site.author.name }}. <a href="{{ site.url}}/permissions/">Some Rights Reserved</a>&nbsp;&nbsp;&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_GB"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a></small></p>
+            <p><small>Copyright &copy; 2010&ndash;{{ site.time | date: "%Y" }} {{ site.author.name }}. <a href="{{ site.url}}/permissions/">Some Rights Reserved</a>&nbsp;&nbsp;&nbsp;<a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://licensebuttons.net/l/by/4.0/80x15.png" /></a></small></p>
             <p><small>Icons by <a href="http://www.glyphicons.com/">Glyphicons</a> used under CC-BY licence</small></p>
           </div>
         </div>
