--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -31,9 +31,25 @@
 <meta property="http://ogp.me/ns/profile#first_name" content="{{ site.author.givenName }}"/>
 <meta property="http://ogp.me/ns/profile#last_name" content="{{ site.author.familyName }}"/>
 <meta property="http://ogp.me/ns/article#published_time" content="{{ postdate | date_to_xmlschema }}" />
-<meta property="og:site_name" content="{{ site.title }}" /> <!-- Same as dc:source? -->
+<meta property="og:site_name" content="{{ site.title }}" />
 <meta property="og:url" content="{{site.url}}{{ page.url }}" />
 <meta property="og:type" content="article" />
+{% if page.excerpt %}
+<meta name="og:description" content="{{ page.excerpt | strip_html | truncatewords: 50 }}" />
+{% else %}
+<meta name="og:description" content="{{ page.title }}" />
+{% endif %}
+<!-- Twitter Card Meta data -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site.id" content="@ucfagls" />
+<meta name="twitter:creator:id" content="@ucfagls" />
+<meta name="twitter:title" content="{{ page.title | strip_html | truncate: 69 }}" />
+{% if page.twitterimg %}
+<meta name="twitter:image" content="{{ site.url }}/assets/img/posts/{{ page.twitterimg }}" />
+{% endif %}
+{% if page.excerpt %}
+<meta name="twitter:description" content="{{ page.excerpt | strip_html | truncate: 199 }}" />
+{% endif %}
 <!-- Google Scholar Metadata -->
 <meta name="resource_type" content="{{site.title}}"/>
 <meta name="citation_journal_title" content="{{site.title}}"/>
