--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -478,3 +478,13 @@ kbd {
  *}
  */
 
+dl {
+  margin-bottom: 1em;
+}
+
+dt {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: #000000;
+}
