--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -478,13 +478,14 @@ kbd {
  *}
  */
 
-dl {
-  margin-bottom: 1em;
-}
-
 dt {
   font-family: 'Open Sans Condensed', sans-serif;
   font-weight: 500;
   font-size: 20px;
-  color: #000000;
+  color: #333333;
+  margin-top: 0.75em;
+}
+
+dt, dd {
+  line-height: 26px;
 }
